// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot > 실제 code-philosophy.yaml 로드 후 렌더링 결과 snapshot 1`] = `
"# Code Philosophy

## Constraints

- DO NOT write clever or opaque code. Prefer explicit intent over tricks.
- DO NOT extract shared abstractions before the Rule of Three.
- DO NOT mutate state. Use const/final and spread operators for immutability.
- DO NOT mix side effects into core business functions.

## Guidelines

- Optimize for readability and maintainability first.
- Prefer temporary duplication over premature abstraction.
- For non-trivial business rules, start with a failing test (TDD).
- Use a functional-core / imperative-shell structure.
- Use immutable updates (const/final, copy/spread patterns).

## Decision Table

| When | Then | Avoid |
|------|------|-------|
| Implementing complex business logic | Write failing tests first, then implement pure functions | Implementation-first with mixed I/O |
| Similar code appears in two places | Keep duplication temporarily | Early shared abstraction |
| Similar code appears in three or more places | Extract a clearly named shared function |  |"
`;

exports[`Snapshot: renderForTool > claude-code snapshot 1`] = `
{
  "files": [
    {
      "content": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean",
      "relativePath": ".claude/rules/communication.md",
    },
    {
      "content": "---
paths:
  - "**/*.ts"
  - "**/*.tsx"
---

# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
      "relativePath": ".claude/rules/typescript.md",
    },
  ],
  "tool": "claude-code",
}
`;

exports[`Snapshot: renderForTool > codex snapshot 1`] = `
{
  "domainFiles": [],
  "rootContent": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean

---

# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
  "tool": "codex",
}
`;

exports[`Snapshot: renderForTool > gemini snapshot 1`] = `
{
  "domainFiles": [],
  "rootContent": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean

---

# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
  "tool": "gemini",
}
`;
